# mailwoman

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  SPEC.md  VERSIONING.md  deny.toml  docker-compose.ci.yml  docker-compose.crypto.yml  docker-compose.dev.yml  docker-compose.hardened.yml  license.md  lighthouserc.json  readme.md  weblate.ini
.weblate/: components.yaml
crates/mw-admin/: Cargo.toml
crates/mw-admin/src/: audit.rs  banlist.rs  cli.rs  config.rs  lib.rs  password.rs  provisioning.rs  store.rs
crates/mw-assist/: Cargo.toml
crates/mw-assist/src/: adapters.rs  assistant.rs  lib.rs  redact.rs  tests.rs
crates/mw-autoconfig/: Cargo.toml
crates/mw-autoconfig/data/: provider-db.json
crates/mw-autoconfig/src/: lib.rs  provider.rs  resolver.rs  xml.rs
crates/mw-cache/: Cargo.toml
crates/mw-cache/src/: lib.rs  tests.rs
crates/mw-carddav/: Cargo.toml
crates/mw-carddav/src/: lib.rs  request.rs  response.rs  transport.rs  vcard.rs
crates/mw-crypto/: .gitignore  Cargo.toml
crates/mw-crypto/fuzz/: Cargo.toml
crates/mw-crypto/fuzz/fuzz_targets/: cms_parse.rs  pgp_parse.rs  pkcs12_parse.rs
crates/mw-crypto/src/: error.rs  keyring.rs  lib.rs  native.rs  pgp.rs  pqc.rs  rng.rs  smime.rs  types.rs  wasm.rs  zeroaccess.rs
crates/mw-crypto/tests/: pgp.rs  pqc.rs  smime.rs
crates/mw-dav/: Cargo.toml
crates/mw-dav/fuzz/: Cargo.toml
crates/mw-dav/src/: lib.rs  request.rs  response.rs
crates/mw-dav/tests/: fixtures.rs
crates/mw-directory/: Cargo.toml
crates/mw-directory/src/: ldap_backend.rs  lib.rs  tests.rs
crates/mw-engine/: Cargo.toml
crates/mw-engine/src/: account.rs  acl.rs  backend.rs  change.rs  dispatcher.rs  engine.rs  identity.rs  jmap.rs  lib.rs  maintenance.rs  mapping.rs  meta.rs  query.rs  rules.rs  search_index.rs  state.rs  submission.rs  thread.rs  v6.rs  v7.rs
crates/mw-engine/tests/: engine.rs  pim.rs  security.rs  t14_attach.rs  v2.rs  v6.rs  v7.rs
crates/mw-export/: Cargo.toml
crates/mw-export/fuzz/: Cargo.toml
crates/mw-export/src/: docx.rs  html2md.rs  lib.rs  markdown.rs  mbox.rs  msg.rs  oft.rs  text.rs
crates/mw-export/tests/: msg_deep_fidelity.rs
crates/mw-ics/: Cargo.toml
crates/mw-ics/fuzz/: Cargo.toml
crates/mw-ics/src/: dt.rs  freebusy.rs  hol.rs  ical.rs  itip.rs  lib.rs  recur.rs  vcard.rs
crates/mw-ics/tests/: roundtrip.rs
crates/mw-imap/: Cargo.toml
crates/mw-imap/fuzz/: Cargo.toml
crates/mw-imap/src/: backend.rs  caps.rs  connection.rs  error.rs  lib.rs  sasl.rs  session.rs  sync.rs  tls.rs  transport.rs
crates/mw-imap/tests/: imap_flows.rs  live_greenmail.rs
crates/mw-jmap/: Cargo.toml
crates/mw-jmap/src/: client.rs  lib.rs  types.rs
crates/mw-mcp/: Cargo.toml
crates/mw-mcp/src/: auth.rs  backend.rs  gating.rs  lib.rs  mock.rs  server.rs  transport.rs
crates/mw-mcp/tests/: mcp.rs
crates/mw-media-wasm/: .gitignore  Cargo.toml  build.sh  media.wasm
crates/mw-media-wasm/src/: lib.rs
crates/mw-mfa/: Cargo.toml
crates/mw-mfa/src/: cbor.rs  cose.rs  lib.rs  recovery.rs  tests.rs  totp.rs  webauthn.rs
crates/mw-mime/: Cargo.toml
crates/mw-mime/fuzz/: Cargo.toml
crates/mw-mime/src/: build.rs  lib.rs  parse.rs
crates/mw-mime/tests/: fuzz_smoke.rs  parse_corpus.rs  roundtrip.rs
crates/mw-mock-jmap/: Cargo.toml
crates/mw-mock-jmap/src/: lib.rs  main.rs
crates/mw-oauth/: Cargo.toml
crates/mw-oauth/src/: dcr.rs  enforce.rs  keys.rs  lib.rs  oauth.rs  pkce.rs  store.rs  util.rs
crates/mw-oauth/tests/: oauth.rs
crates/mw-passwd/: Cargo.toml
crates/mw-passwd/src/: audit.rs  dovecot.rs  ldap3062.rs  lib.rs  local.rs  policy.rs  poppassd.rs  secret.rs  webhook.rs
crates/mw-plugin/: Cargo.toml
crates/mw-plugin/src/: adapter.rs  adapter_pim.rs  bindings.rs  doctor.rs  engine.rs  host_state.rs  lib.rs  signature.rs
crates/mw-plugin/tests/: jail.rs  pim.rs
crates/mw-plugin/wit/: plugin.wit
crates/mw-pop3/: Cargo.toml
crates/mw-pop3/fuzz/: Cargo.toml
crates/mw-pop3/src/: backend.rs  conn.rs  lib.rs  policy.rs  proto.rs  sasl.rs
crates/mw-pop3/tests/: live_greenmail.rs  transcripts.rs
crates/mw-render/: Cargo.toml
crates/mw-render/src/: lib.rs  main.rs  media_jail.rs
crates/mw-sandbox/: Cargo.toml
crates/mw-sandbox/src/: lib.rs  linux.rs
crates/mw-sanitize/: Cargo.toml
crates/mw-sanitize/src/: lib.rs  wasm.rs
crates/mw-search/: Cargo.toml
crates/mw-search/src/: lib.rs  query.rs
crates/mw-search/tests/: bench.rs  operators.rs
crates/mw-server/: Cargo.toml
crates/mw-server/src/: admin.rs  admin_maintenance.rs  admin_plugins.rs  admin_sso.rs  arf.rs  assist.rs  directory.rs  dlp.rs  engine_mode.rs  errors.rs  fonts.rs  hardening.rs  holidays.rs  image_proxy.rs  import_routes.rs  lib.rs  main.rs  masked.rs  mcp.rs  nextcloud.rs  oauth.rs  oauth_client.rs  observability.rs  passwd.rs  plugins.rs  prefs_routes.rs  push.rs  push_relay.rs  rest.rs  scope_mw.rs  sharing.rs  sieve_sync.rs  sso.rs  stores_v6.rs  tls.rs  twofa_routes.rs  ui_plugins.rs  v7_mount.rs  watermark.rs  webhooks.rs  (+1 more)
crates/mw-server/tests/: engine_download.rs  engine_live.rs  integration.rs  pim.rs  push_hardening.rs  push_v5.rs  security.rs  sso_e2e.rs  sso_live.rs  t10_dcr.rs  t10_export_deep.rs  t10_pim_seam.rs  t10_spam_masked.rs  t11_dcr_admin.rs  t11_masked_send.rs  t12_autoconfig.rs  t12_dlp_spf_smime.rs  t12_ews_auth.rs  t12_imap_sort_thread.rs  t12_pop3_sasl.rs  t12_sasl.rs  t12_smtp_ext.rs  t13_acl_metadata.rs  t13_geoip.rs  t13_jwz.rs  t13_scram_plus.rs  t14_blob_attach.rs  t14_jwz_backfill.rs  t14_metadata_admin.rs  t14_scram_plus_login.rs  t15_plugin_kv.rs  t15_thirdparty_load.rs  t15_upload.rs  t16_bridge_oauth.rs  t16_csp_shell.rs  t16_image_proxy.rs  t16_routes.rs  t16_sandbox.rs  t16_threading.rs  t16_twofa.rs  (+20 more)
crates/mw-sieve/: Cargo.toml
crates/mw-sieve/src/: client.rs  codegen.rs  eval.rs  lib.rs  lint.rs  managesieve.rs  parse.rs  tls.rs  transport.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: imap_parse_response.rs  mime_parse.rs  pop3_parse.rs  sanitize_html.rs  sieve_parse.rs
(+1225 files in other folders)
