[workspace]
resolver = "3"
members = [
    "crates/mw-jmap",
    "crates/mw-sanitize",
    "crates/mw-render",
    "crates/mw-store",
    "crates/mw-mock-jmap",
    "crates/mw-server",
    "crates/mw-mime",
    "crates/mw-imap",
    "crates/mw-pop3",
    "crates/mw-smtp",
    "crates/mw-engine",
    "crates/mw-autoconfig",
    "crates/mw-search",
    "crates/mw-sieve",
    "crates/mw-export",
    "crates/mw-ics",
    "crates/mw-dav",
    "crates/mw-carddav",
    "crates/mw-crypto",
]

[workspace.package]
version = "26.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/supermarsx/mailwoman"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "signal", "net", "time", "sync"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono"] }
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
bytes = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ammonia = "4"
rust-embed = "8"
mime_guess = "2"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# V1 mail-engine deps (all MIT/Apache-2.0 dual — vetted, no copyleft, no async-std).
# `imap-proto` is the IMAP response *parser*; the command/extension layer is hand-rolled
# over tokio + rustls (plan §1.1). `mail-parser`/`mail-builder` are the Stalwart *library*
# crates (MIT/Apache), NOT the AGPL server (plan §1.2).
imap-proto = "0.16"
mail-parser = "0.11"
mail-builder = "0.4"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1"
webpki-roots = "1"
encoding_rs = "0.8"
async-trait = "0.1"
data-encoding = "2"

# V2 deps (plan §1.11 — all confirmed permissive, no GPL/LGPL/AGPL; Win+Linux).
# `tantivy` is the engine-side full-text index (mw-search, e1). `tokio-tungstenite`
# + `futures-util` back the JMAP WebSocket push server (mw-server, e10).
# `tokio-rustls-acme` is the ACME/TLS listener, compatible with the tree's
# rustls 0.23 / tokio-rustls 0.26. `vanilla-extract`/`pdfjs-dist`/`idb` are web-only.
tantivy = "0.26"
tokio-tungstenite = "0.30"
tokio-rustls-acme = "0.9"
futures-util = "0.3"

# V3 PIM deps (plan §1.2/§1.3/§1.10 — all confirmed MIT OR Apache-2.0, no
# GPL/LGPL/AGPL; pure-Rust, Win+Linux). `icalendar` is the iCalendar
# (VEVENT/VTODO/VALARM/VTIMEZONE) parse+emit model; `vcard4` the vCard 3/4
# parser; `rrule` (fmeringdal/rust-rrule) the RRULE expansion engine; `chrono-tz`
# the IANA tz database for TZID-aware/DST-correct expansion — all wrapped behind
# `mw-ics`'s stable API. `quick-xml` backs the hand-rolled CalDAV/CardDAV
# DAV/HTTP core in `mw-dav`/`mw-carddav` over the in-tree `reqwest`. (Rejected
# `calcard` — Stalwart's combined parser — its license was unconfirmable at plan
# time; this stack is all confirmed permissive, plan §1.2.)
icalendar = "0.17"
vcard4 = "0.7"
rrule = "0.14"
quick-xml = "0.41"
chrono-tz = "0.10"

# V4 crypto & security deps (plan §1.11 — ALL confirmed permissive: MIT OR
# Apache-2.0 / BSD / ISC, NO GPL/LGPL/AGPL; pure-Rust + wasm-compatible except the
# native-only enrichment crates, which are feature-gated out of the wasm build).
# Versions verified against crates.io on 2026-07-13. These are PRE-DECLARED here so
# `mw-crypto`/`mw-engine` reference them via `{ workspace = true }`; the e0 scaffold
# stub itself pulls in only the wasm-safe subset (serde/zeroize + the wasm-bindgen
# surface) so both the native workspace build and the `wasm32-unknown-unknown`
# build of the stub stay green. e1 wires the real rPGP / RustCrypto / ml-kem paths.
#
#   pgp (rPGP)  — OpenPGP RFC 9580; MIT/Apache-2.0 (NOT sequoia-openpgp/LGPL,
#                 banned in deny.toml); continuously wasm-tested (Delta Chat).
#   cms/x509-cert/rsa/p256 — RustCrypto S/MIME stack; Apache-2.0/MIT; pure-Rust,
#                 wasm-ok. (cms/rsa currently ship pre-releases; pinned exactly.)
#   ml-kem      — FIPS-203 ML-KEM (PQC key-wrap); Apache-2.0/MIT; UNAUDITED (noted,
#                 plan §1.7/§6#8) — scoped to store-key wrapping, not a user claim.
#   mail-auth   — Stalwart DKIM/SPF/DMARC/ARC + ARF; Apache-2.0 OR MIT (permissive
#                 lib crate, NOT the AGPL server). NATIVE-only (needs DNS resolver).
#   sha2/sha1/zeroize — RustCrypto hashing + secret-zeroing; Apache-2.0/MIT; wasm-ok.
#   maxminddb   — OPTIONAL GeoIP MMDB reader for Received-chain ASN/country; ISC;
#                 NATIVE-only; cut-able (plan §1.12).
#   wasm-bindgen/js-sys/web-sys/getrandom — the wasm-pack browser boundary;
#                 Apache-2.0/MIT. getrandom uses its `wasm_js` JS backend on wasm32
#                 (see scripts/build-wasm.* + crates/mw-crypto notes) — e1/e8 wire it.
#   VET-BEFORE-ENABLE: aws-lc-rs (only if TLS-hybrid X25519MLKEM768 is enabled,
#                 plan §1.7/§1.11) — Apache-2.0/ISC + OpenSSL-licensed C; NOT a V4
#                 gate. Left OUT of the build until vetted (flagged in deny.toml).
pgp = "0.20"
cms = "=0.3.0-pre.2"
x509-cert = "0.3"
rsa = "=0.10.0-rc.18"
p256 = "0.14"
ml-kem = "0.3"
# default-features OFF drops the crate's default `aws-lc-rs` provider (plan §1.11
# VET-BEFORE-ENABLE — not a V4 gate); consumers (mw-engine) opt into the hickory
# resolver + arc + report features. Keeps the license floor + Windows build clean.
mail-auth = { version = "0.11", default-features = false }
sha2 = "0.11"
sha1 = "0.11"
# DLP custom-regex detector (plan §1.8, §2.1). Already in-tree transitively
# (hickory/reqwest); a direct dep for the engine's rule engine. MIT/Apache-2.0.
regex = "1"
zeroize = { version = "1.9", features = ["derive"] }
maxminddb = "0.29"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
getrandom = "0.4"

mw-jmap = { path = "crates/mw-jmap" }
mw-sanitize = { path = "crates/mw-sanitize" }
mw-store = { path = "crates/mw-store" }
mw-mock-jmap = { path = "crates/mw-mock-jmap" }
mw-mime = { path = "crates/mw-mime" }
mw-imap = { path = "crates/mw-imap" }
mw-pop3 = { path = "crates/mw-pop3" }
mw-smtp = { path = "crates/mw-smtp" }
mw-engine = { path = "crates/mw-engine" }
mw-autoconfig = { path = "crates/mw-autoconfig" }
mw-search = { path = "crates/mw-search" }
mw-sieve = { path = "crates/mw-sieve" }
mw-export = { path = "crates/mw-export" }
mw-ics = { path = "crates/mw-ics" }
mw-dav = { path = "crates/mw-dav" }
mw-carddav = { path = "crates/mw-carddav" }
mw-crypto = { path = "crates/mw-crypto" }

[profile.release]
overflow-checks = true
