[workspace]
resolver = "3"
members = [
    "crates/mw-jmap",
    "crates/mw-sanitize",
    "crates/mw-render",
    "crates/mw-store",
    "crates/mw-mock-jmap",
    "crates/mw-server",
    "crates/mw-mime",
    "crates/mw-imap",
    "crates/mw-pop3",
    "crates/mw-smtp",
    "crates/mw-engine",
    "crates/mw-autoconfig",
    "crates/mw-search",
    "crates/mw-sieve",
    "crates/mw-export",
    "crates/mw-ics",
    "crates/mw-dav",
    "crates/mw-carddav",
    "crates/mw-crypto",
    "crates/mw-cache",
    "crates/mw-admin",
    "crates/mw-mcp",
    "crates/mw-oauth",
    "crates/mw-sso",
    # ── V7 (26.8.0) new crates + plugin skeletons (plan §3 e0). The four native
    # crates compile on the host; the `plugins/*` skeletons are inert host-target
    # lib stubs today — their real `wasm32-wasip2` component build is deferred to
    # e15 (plan §3). ──
    "crates/mw-plugin",
    "crates/mw-directory",
    "crates/mw-passwd",
    "crates/mw-assist",
    "plugins/bridge-graph",
    "plugins/bridge-ews",
    "plugins/bridge-gmail",
    "plugins/nextcloud",
    "plugins/languagetool",
    # ── t10 (26.10) tail plugins: spam trainers + masked-email (plan §3 e0). ──
    "plugins/spam-rspamd",
    "plugins/spam-spamassassin",
    "plugins/masked-email",
    "apps/desktop/src-tauri",
    "apps/mobile/src-tauri",
]

[workspace.package]
version = "26.13.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/supermarsx/mailwoman"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "signal", "net", "time", "sync"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono"] }
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
bytes = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ammonia = "4"
rust-embed = "8"
mime_guess = "2"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# V1 mail-engine deps (all MIT/Apache-2.0 dual — vetted, no copyleft, no async-std).
# `imap-proto` is the IMAP response *parser*; the command/extension layer is hand-rolled
# over tokio + rustls (plan §1.1). `mail-parser`/`mail-builder` are the Stalwart *library*
# crates (MIT/Apache), NOT the AGPL server (plan §1.2).
imap-proto = "0.16"
mail-parser = "0.11"
mail-builder = "0.4"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1"
webpki-roots = "1"
encoding_rs = "0.8"
async-trait = "0.1"
data-encoding = "2"

# V2 deps (plan §1.11 — all confirmed permissive, no GPL/LGPL/AGPL; Win+Linux).
# `tantivy` is the engine-side full-text index (mw-search, e1). `tokio-tungstenite`
# + `futures-util` back the JMAP WebSocket push server (mw-server, e10).
# `tokio-rustls-acme` is the ACME/TLS listener, compatible with the tree's
# rustls 0.23 / tokio-rustls 0.26. `vanilla-extract`/`pdfjs-dist`/`idb` are web-only.
tantivy = "0.26"
tokio-tungstenite = "0.30"
tokio-rustls-acme = "0.9"
futures-util = "0.3"

# V3 PIM deps (plan §1.2/§1.3/§1.10 — all confirmed MIT OR Apache-2.0, no
# GPL/LGPL/AGPL; pure-Rust, Win+Linux). `icalendar` is the iCalendar
# (VEVENT/VTODO/VALARM/VTIMEZONE) parse+emit model; `vcard4` the vCard 3/4
# parser; `rrule` (fmeringdal/rust-rrule) the RRULE expansion engine; `chrono-tz`
# the IANA tz database for TZID-aware/DST-correct expansion — all wrapped behind
# `mw-ics`'s stable API. `quick-xml` backs the hand-rolled CalDAV/CardDAV
# DAV/HTTP core in `mw-dav`/`mw-carddav` over the in-tree `reqwest`. (Rejected
# `calcard` — Stalwart's combined parser — its license was unconfirmable at plan
# time; this stack is all confirmed permissive, plan §1.2.)
icalendar = "0.17"
vcard4 = "0.7"
rrule = "0.14"
quick-xml = "0.41"
chrono-tz = "0.10"

# V4 crypto & security deps (plan §1.11 — ALL confirmed permissive: MIT OR
# Apache-2.0 / BSD / ISC, NO GPL/LGPL/AGPL; pure-Rust + wasm-compatible except the
# native-only enrichment crates, which are feature-gated out of the wasm build).
# Versions verified against crates.io on 2026-07-13. These are PRE-DECLARED here so
# `mw-crypto`/`mw-engine` reference them via `{ workspace = true }`; the e0 scaffold
# stub itself pulls in only the wasm-safe subset (serde/zeroize + the wasm-bindgen
# surface) so both the native workspace build and the `wasm32-unknown-unknown`
# build of the stub stay green. e1 wires the real rPGP / RustCrypto / ml-kem paths.
#
#   pgp (rPGP)  — OpenPGP RFC 9580; MIT/Apache-2.0 (NOT sequoia-openpgp/LGPL,
#                 banned in deny.toml); continuously wasm-tested (Delta Chat).
#   cms/x509-cert/rsa/p256 — RustCrypto S/MIME stack; Apache-2.0/MIT; pure-Rust,
#                 wasm-ok. (cms/rsa currently ship pre-releases; pinned exactly.)
#   ml-kem      — FIPS-203 ML-KEM (PQC key-wrap); Apache-2.0/MIT; UNAUDITED (noted,
#                 plan §1.7/§6#8) — scoped to store-key wrapping, not a user claim.
#   mail-auth   — Stalwart DKIM/SPF/DMARC/ARC + ARF; Apache-2.0 OR MIT (permissive
#                 lib crate, NOT the AGPL server). NATIVE-only (needs DNS resolver).
#   sha2/sha1/zeroize — RustCrypto hashing + secret-zeroing; Apache-2.0/MIT; wasm-ok.
#   maxminddb   — OPTIONAL GeoIP MMDB reader for Received-chain ASN/country; ISC;
#                 NATIVE-only; cut-able (plan §1.12).
#   wasm-bindgen/js-sys/web-sys/getrandom — the wasm-pack browser boundary;
#                 Apache-2.0/MIT. getrandom uses its `wasm_js` JS backend on wasm32
#                 (see scripts/build-wasm.* + crates/mw-crypto notes) — e1/e8 wire it.
#   VET-BEFORE-ENABLE: aws-lc-rs (only if TLS-hybrid X25519MLKEM768 is enabled,
#                 plan §1.7/§1.11) — Apache-2.0/ISC + OpenSSL-licensed C; NOT a V4
#                 gate. Left OUT of the build until vetted (flagged in deny.toml).
pgp = "0.20"
cms = "=0.3.0-pre.2"
x509-cert = "0.3"
rsa = "=0.10.0-rc.18"
p256 = "0.14"
ml-kem = "0.3"
# default-features OFF drops the crate's default `aws-lc-rs` provider (plan §1.11
# VET-BEFORE-ENABLE — not a V4 gate); consumers (mw-engine) opt into the hickory
# resolver + arc + report features. Keeps the license floor + Windows build clean.
mail-auth = { version = "0.11", default-features = false }
sha2 = "0.11"
sha1 = "0.11"
# DLP custom-regex detector (plan §1.8, §2.1). Already in-tree transitively
# (hickory/reqwest); a direct dep for the engine's rule engine. MIT/Apache-2.0.
regex = "1"
zeroize = { version = "1.9", features = ["derive"] }
# ISC, pure-Rust MaxMind-DB reader (no C / no -sys). LINKED into mw-engine as of
# 26.13 (t13 E5) for BYO GeoIP/ASN `.mmdb` enrichment of the Received chain; only
# the reader ships — the DB stays admin-supplied. See deny.toml 26.13 note.
maxminddb = "0.29"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
getrandom = "0.4"

# V5 thin-shell (Tauri v2) + push deps (plan §1.5/§1.7/§1.10 — ALL confirmed
# permissive: MIT OR Apache-2.0, NO GPL/LGPL/AGPL; vetted in deny.toml). Tauri
# core + the official first-party plugins (`tauri-apps/plugins-workspace`) back the
# desktop/mobile shells (`apps/desktop`, `apps/mobile`); they build for the host
# (Windows/Linux/macOS) and are cross-compiled for Android/iOS by `tauri android|ios`.
#   tauri / tauri-build          — the shell runtime + build-time codegen (MIT/Apache).
#   plugin-notification/-os/-deep-link/-biometric/-process/-shell/-updater
#                                — the §2.1 native capabilities (all MIT/Apache).
# `keyring` (OS credential store: DPAPI / Keychain / Secret Service) is linked
# per-target in the shell crate (platform-native backend per OS), not here.
# `web-push` (pimeys/rust-web-push, Apache-2.0; VAPID + RFC 8188/http-ece) is
# PRE-DECLARED here for e5 (server push relay) and NOT yet linked into the tree —
# same posture as the V4 crypto deps above (so not yet in Cargo.lock / cargo-deny
# until e5 wires it; it lands under the permissive allow-list unchanged).
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-biometric = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
# Web Push (VAPID + RFC 8188/http-ece). NB: the originally pre-declared `web-push`
# 0.10 crate transitively pulls `ece` → `openssl` (a `-sys` C build that is BANNED
# in deny.toml and does not build on this Windows/MSVC host). `web-push-native`
# (leotaku/web-push-native, MIT OR Apache-2.0) is the pure-Rust equivalent — it
# builds the encrypted VAPID-signed request over RustCrypto (`aes-gcm`/`hkdf`/
# `p256`/`jwt-simple` with the `pure-rust`/`superboring` backend, NO openssl/boring
# C). mw-server (e5) sends the resulting request over the in-tree `reqwest`.
web-push-native = "0.4"

# ── V6 (26.7.0) new dependencies (plan §5). ALL permissive (MIT OR Apache-2.0 /
# BSD / ISC), pure-Rust + rustls throughout — NO GPL/LGPL/AGPL, NO openssl/-sys C
# TLS. Same posture as the V4/V5 pre-declares above: these are DECLARED here so
# the Batch-B crates reference them via `{ workspace = true }`, and are mostly NOT
# YET LINKED into the tree by this e0 scaffold (the four stub crates link only
# serde/thiserror/chrono), so they are not yet in Cargo.lock / cargo-deny. Each is
# wired by its owning executor and lands under the existing permissive allow-list:
#
#   sqlx `postgres` + `tls-rustls` FEATURES — the pluggable Postgres backend
#     (mw-store, e1). NOT a new crate: sqlx is already a workspace dep (SQLite).
#     e1 enables `features = ["postgres", "tls-rustls"]` ON `sqlx` in mw-store's
#     own Cargo.toml (pure-Rust + rustls; the `tls-rustls` feature keeps openssl
#     OUT). Left OFF the workspace default here so the current build stays lean;
#     enabling it is e1's job (keeps the SQLite-default path byte-unchanged).
#   fred  — Redis/Valkey client (mw-cache, e2). Pure-Rust, rustls TLS (MIT).
#   moka  — in-process cache layer (mw-cache, e2). MIT OR Apache-2.0.
#   argon2 — API-key/admin password hashing, Argon2id (mw-oauth/mw-admin, e3/e5).
#            RustCrypto; MIT OR Apache-2.0.
#   rmcp  — official MCP Rust SDK (mw-mcp, e4). MIT. Fallback = hand-rolled
#            JSON-RPC/Streamable-HTTP over the in-tree axum if maturity slips (§6 R3).
#   hmac  — webhook HMAC-SHA256 signing (mw-server webhooks, e9). RustCrypto;
#            MIT OR Apache-2.0 (pairs with the in-tree `sha2`). Pinned to 0.13
#            (NOT 0.12): 0.12 targets `digest` 0.10 while the in-tree `sha2` is
#            0.11 (`digest` 0.11); 0.13 is the matching RustCrypto release. e12
#            realigned this workspace pin to 0.13 so mw-server's webhook signer
#            resolves a single hmac version across the tree.
#   opentelemetry / opentelemetry-otlp / tracing-opentelemetry — OTLP traces +
#            metrics (mw-server observability, e9). MIT OR Apache-2.0; tonic-rustls
#            transport (e9 verifies no openssl enters the OTLP tree at wire time).
#   metrics / metrics-exporter-prometheus — auth-gated Prometheus `/metrics`
#            (mw-server, e9). Pure-Rust; MIT OR Apache-2.0.
fred = "10"
moka = { version = "0.12", features = ["future"] }
argon2 = "0.5"
rmcp = "0.9"
hmac = "0.13"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "tls-roots", "trace", "metrics"] }
tracing-opentelemetry = "0.32"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
# CONDITIONAL / VET-BEFORE-ENABLE (plan §5) — declared as intent, NOT enabled by
# e0 and NOT linked into the tree. Enable only if the noted precondition holds and
# the crate's transitive tree clears the license/TLS floor (rustls, no openssl):
#   jsonwebtoken (MIT, ring-backed) — ONLY if OAuth resource-indicator interop
#     needs JWTs; the default is opaque hashed tokens, so likely unused (e3).
#   totp-rs (MIT) — admin TOTP 2FA; admin passkey-only is the default, so this may
#     defer to V7 (e5).
#   sentry (MIT OR Apache-2.0) — §21.2 error reporting, off by default; OTLP +
#     Prometheus are the committed observability paths. Enable only after vetting
#     its dep tree for a rustls transport with no openssl (e9/e12, plan §6 R6).
# TODO(v6): vet-before-enable — jsonwebtoken / totp-rs / sentry.

# ── V7 (26.8.0) new dependencies (plan §5). WASM plugin runtime · LDAP/GAL
# directory · password-change · Assist(AI) · Graph/EWS/Gmail bridges · MSG/OFT/DOCX
# export · Nextcloud. Same POSTURE as the V4/V5/V6 pre-declares above: these are
# DECLARED here so the Batch-B crates reference them via `{ workspace = true }`, and
# are mostly NOT YET LINKED into the tree by this e0 scaffold (the four new stub
# crates + the five plugin skeletons link only serde/thiserror/chrono/async-trait +,
# for mw-plugin, the frozen `mw-engine` trait). Because an UNREFERENCED
# `[workspace.dependencies]` entry is never resolved into `Cargo.lock`, none of the
# heavy trees below (wasmtime/ldap3/docx-rs/cfb) are fetched or seen by `cargo deny`
# until their owning executor links them — exactly as V4/V5/V6 deferred wasmtime-class
# deps. Each lands under the permissive allow-list (deny.toml); ALL are permissive,
# pure-Rust, NO GPL/LGPL/AGPL, NO openssl/-sys C.
#
#   wasmtime / wasmtime-wasi — the WASM plugin host + WASI-p2 component model
#     (mw-plugin, §22/§7.5). Apache-2.0 WITH LLVM-exception (already in the
#     deny.toml `[licenses].allow`). Pure-Rust; e1 VERIFIES the whole tree = no
#     openssl / no `-sys` C before anyone builds on it (plan §6 R3). The e0
#     mw-plugin STUB does NOT yet depend on wasmtime (see TODO(e1) in its
#     Cargo.toml) — pulling the large host now risks the scaffold build/lock, so it
#     is declare-only here (same posture V4/V6 used for heavy deps). Versions are a
#     current baseline; e1 pins the exact working release when it wires the host.
#   wit-bindgen — the guest-side plugin ABI bindings used by `plugins/*`
#     (component build, e15). Apache-2.0 WITH LLVM-exception. Guest-only; declare-
#     only until e15's `wasm32-wasip2` build links it.
#   ldap3 — LDAP/GAL/group/cert/bind (mw-directory, §13). MIT. MUST be
#     `default-features=false, features=["tls-rustls"]` — ldap3 defaults to
#     native-tls (→ openssl), which is BANNED; the rustls feature keeps openssl OUT
#     (plan §1.3/§5). e2 links it and asserts no native-tls/openssl in the tree.
#   docx-rs — DOCX export (mw-export, §10.6). MIT. e5 links it.
#   cfb — the MS-OXMSG/OFT Compound-File-Binary container (mw-export, §10.6).
#     MIT OR Apache-2.0. e5 layers its own MS-OXMSG on top + a CFB fuzz target.
#   quick-xml — REUSED (already declared for V3 mw-ics/mw-dav) for the EWS SOAP
#     subset (bridge-ews) + OXMSG XML; no new entry needed.
#   pure-Rust NTLM (EWS on-prem auth, bridge-ews, R2) — TODO(e11): VET the exact
#     crate before declaring (candidate: `ntlmclient`, MIT — verify it is pure-Rust
#     with NO GSSAPI/C and clears the license floor). If none is clean, e11
#     HAND-ROLLS the NTLMv2 message flow (plan §5/§6 R2). Kerberos stays a
#     documented gap (BYO reverse-proxy-auth; native post-1.0). NOT declared here
#     to avoid pinning an unvetted crate.
#   Assist adapters (mw-assist) + Nextcloud (plugins/nextcloud) — NO new dep:
#     hand-rolled JSON over the existing `reqwest`(rustls) (+ `quick-xml` for
#     Nextcloud OCS/WebDAV), following the V6 `rmcp` lesson (plan §5).
#   Plugin signature verify (mw-plugin) — REUSE `ed25519-dalek`/existing crypto via
#     mw-crypto; no new dep (e1).
wasmtime = "46"
wasmtime-wasi = "46"
wit-bindgen = "0.46"
ldap3 = { version = "0.12", default-features = false, features = ["tls-rustls-ring"] }
docx-rs = "0.4"
cfb = "0.10"

mw-jmap = { path = "crates/mw-jmap" }
mw-sanitize = { path = "crates/mw-sanitize" }
mw-store = { path = "crates/mw-store" }
mw-mock-jmap = { path = "crates/mw-mock-jmap" }
mw-mime = { path = "crates/mw-mime" }
mw-imap = { path = "crates/mw-imap" }
mw-pop3 = { path = "crates/mw-pop3" }
mw-smtp = { path = "crates/mw-smtp" }
mw-engine = { path = "crates/mw-engine" }
mw-autoconfig = { path = "crates/mw-autoconfig" }
mw-search = { path = "crates/mw-search" }
mw-sieve = { path = "crates/mw-sieve" }
mw-export = { path = "crates/mw-export" }
mw-ics = { path = "crates/mw-ics" }
mw-dav = { path = "crates/mw-dav" }
mw-carddav = { path = "crates/mw-carddav" }
mw-crypto = { path = "crates/mw-crypto" }
mw-cache = { path = "crates/mw-cache" }
mw-admin = { path = "crates/mw-admin" }
mw-mcp = { path = "crates/mw-mcp" }
mw-oauth = { path = "crates/mw-oauth" }
mw-sso = { path = "crates/mw-sso" }
# ── V7 (26.8.0) new crate path deps (plan §3 e0). ──
mw-plugin = { path = "crates/mw-plugin" }
mw-directory = { path = "crates/mw-directory" }
mw-passwd = { path = "crates/mw-passwd" }
mw-assist = { path = "crates/mw-assist" }

[profile.release]
overflow-checks = true
# 1.0 hardening (§23 size budget): strip debug symbols from the release binary
# (~104MB → ~80MB, zero runtime cost). This is the safe autonomous size win; the
# residual gap to the §23 45MB-binary / 30MB-image budgets is structural — the
# full V7 feature set (wasmtime plugin JIT + all bridges/crypto/protocols, all
# statically linked + the embedded SPA) — and closing it needs a deeper decision
# (a feature-gated "core server" build dropping bundled bridges/plugins, LTO+opt-z
# at a build-time/runtime cost, or a §23 budget revision to full-feature-realistic
# numbers). That decision is HUMAN-GATED, paired with the 1.0 tag; the perf.yml
# binary-size/image-size gates stay honest (red against the SPEC number) until then.
strip = true
